cocktail.ui: alignment fix for DropdownPanel

--- a/cocktail/ui/resources/styles/cocktail-ui-dropdownpanel.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-dropdownpanel.scss
@@ -10,6 +10,7 @@ $hpadding: 0.5rem;
 :host {
     display: inline-block;
     z-index: 2;
+    align-self: center;
 }
 
 #button {
